--- a/src/components/css/Item_anime_main.css
+++ b/src/components/css/Item_anime_main.css
@@ -33,7 +33,7 @@
 .items {
     display:none;
     flex-direction: column;
-    border-radius: 15px;
+    border-radius: 10px;
     background-color: #1a1a1a31;
     width: 100%;
     max-height: 70vh;
@@ -87,7 +87,61 @@
     height: 180px;
     display: flex;
 }
-
+.relations_wrapper {
+    position: relative;
+    display: block;
+}
+ .relation_cards_container {
+    display: grid;
+    grid-column-gap: 30px;
+    padding:10px;
+    grid-row-gap: 15px;
+    grid-template-columns: repeat(auto-fill,minmax(135px,1fr));
+}
+ .relation_card {
+    border-radius: 3px;
+    display: flex;
+    height: 185px;
+    border-radius: 8px;
+    width:145px;
+    min-width:145px;
+    flex-direction: row;
+    max-height: 185px;
+    object-fit: cover;
+}
+.card_wrap{
+    cursor: pointer;
+    display: inline-block;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    width:100%;
+    height: 100%;
+    z-index: 5;
+    border-radius: 8px;
+}
+ .relation_card img {
+    o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: center;
+    object-position: center;
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
+}
+.card_content{
+    width: 100%;
+    border-radius: 0 3px 3px 0;
+    padding: 12px;
+    position: relative;
+}
+.card_title {
+    display: -webkit-box;
+    font-size: 1.4rem;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
 @media screen and (max-width: 960px){
     .item_page_container {
         flex-direction: column;
