--- a/src/components/css/Hero.css
+++ b/src/components/css/Hero.css
@@ -116,7 +116,9 @@
   }
 
 
+@media screen and (max-width: 1024px){
 
+}
 
   @media only screen and (min-width: 769px) and (max-width: 1281px){
   
@@ -126,10 +128,9 @@
       margin-bottom:0;
       }
 
-    .Items {
-      overflow: hidden;
-      flex-direction: column;
-  }
+    .navbar {
+
+    }
   .text_container > h1 {
     color: #E3E3E3;
     font-size: 58px;
@@ -138,15 +139,18 @@
     line-height: 65px;
     max-width: 80%;
     text-align: left;
-    padding-left: 3rem;
     padding-bottom:0rem;
   }
+  .text_container  {
+    padding-left:3rem;
+  }
+    
     .text_container span {
       margin-top:8px;
     }
    
     .container_s{
-      align-self:flex-end;
+      
       padding-bottom: 3rem;
       margin-top: 3rem
     }
