--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+:root {
+  --toastify-z-index: 999999999;
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,6 +9,7 @@
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 
