--- a/src/components/css/Anilist.css
+++ b/src/components/css/Anilist.css
@@ -39,8 +39,8 @@
 .search_box::-webkit-scrollbar {
     display: none;
   }
-.search_box input, .Select {
-    border-radius: 6px;
+.search_box input, select {
+    border-radius: 4px;
     display: grid;
     font-family: 'Poppins';
     font-size: 12.5px;
@@ -53,6 +53,9 @@
     padding-left: 13px;
     margin-bottom: 50px;
     border:none;
+}
+.search_box select option {
+    
 }
 .section_header{
     position: relative;
@@ -68,12 +71,13 @@
 
 }
 .section_header p {
-    font-size: 23px;
+    font-size: 20px;
     font-weight: 550;
     color:#E3E3E3;
     font-family: 'Poppins';
     text-transform: uppercase;
-    border-bottom: 4px solid #BE4242;
+    border-left: 3px solid #BE4242;
+    text-indent: 10px;
 }
 .see_more {
     color: #BE4242;
@@ -94,6 +98,7 @@
     grid-gap: 28px 30px;
     grid-template-columns: repeat(auto-fill,185px);
     justify-content: space-between;
+    padding-bottom:40px;
 
 }
 .anime .card-cont {
@@ -113,6 +118,7 @@
     position: relative;
     width: 100%;
     z-index: 5;
+    transition: all 0.3s ease-in-out;
 }
 
 .anime .card-cont .card-anime .info {
@@ -150,7 +156,7 @@
   }
 
 .anime .card-cont .card-anime:hover {
-    box-shadow: 0 0 40px #BE4242;
+    box-shadow: 0 0 33px #BE4242;
     cursor: pointer;
   }
 
@@ -179,6 +185,7 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
 }
+
 
 @media (max-width: 1040px){
     .wrapper{
