--- a/src/components/css/Button.css
+++ b/src/components/css/Button.css
@@ -44,3 +44,46 @@
     color: #BE4242;
     transition: 250ms;
   }
+
+  .list_btn {
+    padding:8px 20px;
+    border-radius:2px;
+    outline:none;
+    border:none;
+    cursor: pointer;
+    font-family: 'Poppins';
+}
+
+.list_btn--before {
+    background-color: var(--primary);
+    color:#242424;
+
+}
+
+.list_btn--after {
+    background-color: transparent;
+    color:#fff;
+    padding: 8px 10px;
+    transition: all 0.3s easy-out;
+    border: 1px solid #BE4242;
+}
+
+.list_btn--medium {
+  color:#fff;
+    padding: 10px 10px;
+    font-size: 1rem;
+    width:120px;
+  }
+  
+  .list_btn--large {
+    padding: 12px 26px;
+    font-size: 1.1rem;
+  }
+  
+  .list_btn--large:hover,
+  .list_btn--medium:hover {
+    transition: all 0.3s ease-out;
+    background:#E3E3E3;
+    color: #BE4242;
+    transition: 250ms;
+  }
