--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,35 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Changa', sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
 }
 
-
-html,body {
-  background-color:#1E1E1E;
+.prof_input {
+  position: relative;
+  font-size: 14px;
+  display: inline-block;
+  width: 100%;
+}
+.input_inner {
+  -webkit-appearance: none;
+  background-color: var(--color-background-navbar);
+  background-image: none;
+  border-radius: 4px;
+  border: 2px solid #40F1B9 !important;
+  box-sizing: border-box;
+  color: #40F1B9;
+  display: inline-block;
+  font-size: inherit;
+  height: 40px;
+  line-height: 35px;
+  outline: none;
+  padding: 0 10px;
+  width: 100%;
+}
+.input_inner::placeholder {
+  color:#fff;
 }
